# Daffodil-Server

./: CMakeLists.txt  README.md  makefile  test.cpp
src/: database.hpp  main.cpp  mainloop.cpp  modulemanager.cpp  modulemanager.hpp  modules.cpp  modules.hpp  netcode.cpp  server.cpp  server.hpp  state.hpp  user.hpp
src/modules/: clientHandling.cpp
